# skyrim-community-shaders

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  Build Release.bat  BuildRelease.bat  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  Dockerfile  EXCEPTIONS.md  ImageBasedLighting.cpp  README.md  containerbuild.ps1  vcpkg.json
.github/workflows/: build.yaml  clang_format.yml  todo.yaml
Streamline/: sl.common.lib  sl.imgui.lib
Streamline/include/: sl.h  sl_consts.h  sl_dlss.h  sl_dlss_g.h  sl_helpers.h  sl_helpers_vk.h  sl_hooks.h  sl_matrix_helpers.h  sl_nis.h  sl_nrd.h  sl_reflex.h  sl_result.h  sl_security.h  sl_struct.h  sl_template.h  sl_version.h
cmake/: AddCXXFiles.cmake  FeatureVersions.h.in  FidelityFX-SDK.cmake  Plugin.h.in  Version.rc.in  XSEPlugin.cmake
cmake/FidelityFX/: CMakeLists.txt
cmake/Streamline/: CMakeLists.txt
features/Dynamic Cubemaps - Metals/textures/: shinyglass_e.dds
features/Grass Lighting/: RunGrass.hlsl
features/Grass Lighting/Shaders/: RunGrass.hlsl
features/Light Limit Fix - Candle Glow/ParticleLights/: candleglow01.ini
features/Light Limit Fix Extended Lights/ParticleLights/: fxglowysparksmoving.ini
features/Light Limit Fix Particle Lights Example/ParticleLights/: fxglowysparksmoving.ini
features/Light Limit Fix/ParticleLights/: enblightglow.ini  fxglowenb.ini  mx_lightglow05.ini
features/PBR/Shaders/: Lighting.hlsl  PBR.hlsli  RunGrass.hlsl
features/Parallax/Shaders/: Lighting.hlsl
features/Subsurface Scattering/Features/: SubsurfaceScattering.ini
features/Subsurface Scattering/Shaders/: SubsurfaceScattering.hlsli
features/Terrain Blending/TerrainBlending/: TerrainBlending.hlsli
features/Tree LOD Lighting/Shaders/: DistantTree.hlsl
features/Water Parallax/Shaders/: WaterParallax.hlsli
include/: BSLightingShaderMaterialPBR.h  BSLightingShaderMaterialPBRLandscape.h  FrameAnnotations.h  PCH.h  imgui.h
include/CLIBUtil/: distribution.hpp  numeric.hpp  rng.hpp  simpleINI.hpp  string.hpp  utils.hpp
include/CLIBUtil/detail/: SimpleIni.h  XoshiroCpp.hpp
include/ENB/: AntTweakBar.h  ENBSeriesAPI.h  ENBSeriesSDK.h
include/FidelityFX/: ffx_fsr3_x64.lib
include/ReShade/: reshade.hpp  reshade_api.hpp  reshade_api_device.hpp  reshade_api_format.hpp  reshade_api_pipeline.hpp  reshade_api_resource.hpp  reshade_events.hpp  reshade_overlay.hpp
include/Streamline/: sl.dlss.lib  sl.reflex.lib  sl_dlss_g.h  sl_nis.h  sl_struct.h
include/Streamline/include/: sl_dlss_g.h  sl_hooks.h
include/detours/: Detours.h  LICENSE
include/detours/Debug/: detours.idb  detours.lib
include/detours/Release/: detours.lib
package/Meshes/Interface/: intperkskydome.nif
package/SKSE/Plugins/: CommunityShaders.json
package/Shaders/: AmbientCompositeCS.hlsl  BloodSplatter.hlsl  Color.hlsl  DICE.hlsl  DeferredCompositeCS.hlsl  DeferredNormalMappingShadowsCS.hlsl  DistantTree.hlsl  Effect.hlsl  HDROutputCS.hlsl  ISAlphaBlend.hlsl  ISApplyReflections.hlsl  ISApplyVolumetricLighting.hlsl  ISBLensFlare.hlsl  ISBasicCopy.hlsl  ISBlur.hlsl  ISCompositeLensFlareVolumetricLighting.hlsl  ISCopy.hlsl  ISDebugSnow.hlsl  ISDepthOfField.hlsl  ISDoubleVision.hlsl  ISDownsample.hlsl  ISExp.hlsl  ISFullScreenVR.hlsl  ISHDR.hlsl  ISIBLensFlare.hlsl  ISLightingComposite.hlsl  ISLigthingComposite.hlsl  ISLocalMap.hlsl  ISMap.hlsl  ISNoise.hlsl  ISRadialBlur.hlsl  ISReflectionsRayTracing.hlsl  ISRefraction.hlsl  ISSAOBlur.hlsl  ISSAOCameraZ.hlsl  ISSAOComposite.hlsl  ISSAOMinify.hlsl  ISSILComposite.hlsl  ISSimpleColor.hlsl  ISSnowSSS.hlsl  (+19 more)
package/Shaders/Common/: Color.hlsl  Color.hlsli  Constants.hlsli  DICETonemapper.hlsli  DeferredShared.hlsl  DeferredShared.hlsli  DummyVS.hlsl  DummyVSTexCoord.hlsl  FastMath.hlsli  FrameBuffer.hlsl  FrameBuffer.hlsli  GBuffer.hlsl  GBuffer.hlsli  LightingData.hlsl  LodLandscape.hlsl  Math.hlsli  MotionBlur.hlsl  MotionBlur.hlsli  PBR.hlsli  Permutation.hlsl  Permutation.hlsli  Random.hlsli  ShadowSampling.hlsli  SharedData.hlsli  Skinned.hlsl  Skinned.hlsli  VR.hlsl  VR.hlsli
package/Shaders/ISSAOCompositeFog/: 0.ps.hlsl
package/Shaders/ISSAOCompositeSAOFog/: 0.ps.hlsl
package/Shaders/RCAS/: RCAS.hlsl
scripts/: buffer_scan.py
src/: BSLightingShaderMaterialPBR.cpp  BSLightingShaderMaterialPBRLandscape.cpp  Bindings.cpp  Bindings.h  Buffer.h  D3D11.cpp  Deferred.cpp  Deferred.h  Feature.cpp  Feature.h  FeatureBuffer.cpp  FeatureBuffer.h  FidelityFX.cpp  FidelityFX.h  FrameAnnotations.cpp  HDR.cpp  HDR.h  Hooks.cpp  Hooks.h  Menu.cpp  Menu.h  PCH.cpp  ShaderCache.cpp  ShaderCache.h  State.cpp  State.h  Streamline.cpp  Streamline.h  TruePBR.cpp  TruePBR.h  Upscaling.cpp  Upscaling.h  Util.cpp  Util.h  VariableRateShading.cpp  VariableRateShading.h  XSEPlugin.cpp
src/API/: CSAPI.h  CSInterface.cpp  CSInterface.h
src/Features/: CloudShadow.cpp  CloudShadow.h  CloudShadows.cpp  CloudShadows.h  Clustered.cpp  Clustered.h  DistantTreeLighting.cpp  DistantTreeLighting.h  DynamicCubemaps.cpp  DynamicCubemaps.h  ExtendedMaterials.cpp  ExtendedMaterials.h  ExtendedTransclucency.cpp  ExtendedTransclucency.h  GrassCollision.cpp  GrassCollision.h  GrassLighting.cpp  GrassLighting.h  ImageBasedLighting.cpp  ImageBasedLighting.h  LightLimitFix.cpp  LightLimitFix.h  PBR.cpp  PBR.h  RainWetnessEffects.cpp  RainWetnessEffects.h  SSVGI.cpp  SSVGI.h  ScreenSpaceGI.cpp  ScreenSpaceGI.h  ScreenSpaceShadows.cpp  ScreenSpaceShadows.h  Skylighting.cpp  Skylighting.h  SubsurfaceScattering.cpp  SubsurfaceScattering.h  TerrainBlending.cpp  TerrainBlending.h  TerrainOcclusion.cpp  TerrainOcclusion.h  (+18 more)
src/RE/: BSGraphics.h  BSGraphicsTypes.cpp  BSGraphicsTypes.h  BSShaderRenderTargets.h
src/ShaderTools/: BSShader.h  BSShaderHooks.cpp  BSShaderHooks.h  ShaderCompiler.cpp  ShaderCompiler.h
src/TruePBR/: BSLightingShaderMaterialPBR.cpp  BSLightingShaderMaterialPBR.h  BSLightingShaderMaterialPBRLandscape.cpp  BSLightingShaderMaterialPBRLandscape.h
src/Utils/: D3D.cpp  D3D.h  Format.cpp  Format.h  Game.cpp  Game.h  GameSetting.cpp  GameSetting.h  Serialize.cpp  Serialize.h  UI.cpp  UI.h
(+166 files in other folders)
